so the IDE recommended changing Room.RoomDescriber into a record. I tried it, but I'm not sure I agree with the IDE on this one. Leaving it in place for now.